# pyoomph_mac_accelerate

./: README.md  pyproject.toml  setup.py
src/: bindings.cpp
src/pyoomph_mac_accelerate/: __init__.py
tests/: test_basic.py
