[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyoomph_mac_accelerate"
version = "0.1.0"
description = "pybind11 wrapper around Apple Accelerate's Sparse Solvers for unsymmetric real sparse matrices"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[tool.setuptools.packages.find]
where = ["src"]
